--- a/css/app.css
+++ b/css/app.css
@@ -7793,6 +7793,83 @@ a.text-dark:hover, a.text-dark:focus {
     color: inherit;
     border-color: #dee2e6; } }
 body {
-  background: royalblue; }
+  background: white;
+  font-family: "Roboto", sans-serif; }
+
+.navbar {
+  font-weight: 100;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 3; }
+  .navbar .nav-item {
+    font-size: 1.8rem;
+    margin-left: 10px; }
+  .navbar .navbar-brand h3 {
+    font-size: 2rem;
+    font-weight: 100; }
+  .navbar .nav-link:hover {
+    transition: .2s;
+    border-bottom: 1px solid white; }
+
+#showcase {
+  background-image: url("../images/baltic-sea-4111719_1920.jpg");
+  background-repeat: no-repeat;
+  background-position: 60% 10%;
+  min-height: 100vh;
+  position: relative; }
+
+#overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.2); }
+
+.circle {
+  width: 45px;
+  height: 45px;
+  margin-bottom: 20px;
+  position: absolute;
+  bottom: 0; }
+
+i.arrow {
+  position: absolute;
+  font-size: 35px;
+  color: #909c9c;
+  top: 3px;
+  left: 7px; }
+
+.header {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+div.header p {
+  margin-top: 0; }
+
+p.details {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 1.4rem; }
+
+.arrow:hover {
+  color: white;
+  cursor: pointer; }
+
+.fa-angle-double-down {
+  animation: arrow 1.5s infinite linear; }
+
+@keyframes arrow {
+  0% {
+    transform: translateY(-20px); }
+  50% {
+    transform: translateY(0px); }
+  100% {
+    transform: translateY(20px); } }
 
 /*# sourceMappingURL=app.css.map */
