create sections contact and image gallery

--- a/css/app.css
+++ b/css/app.css
@@ -7792,6 +7792,9 @@ a.text-dark:hover, a.text-dark:focus {
   .table .thead-dark th {
     color: inherit;
     border-color: #dee2e6; } }
+body {
+  font-family: 'Lato', sans-serif; }
+
 .navbar {
   font-weight: 100;
   position: absolute;
@@ -7863,6 +7866,37 @@ p.details {
 .fa-angle-double-down {
   animation: arrow 1.5s infinite linear; }
 
+.fa-quote-left {
+  opacity: 0.8; }
+
+.description {
+  text-align: justify;
+  letter-spacing: 0.4;
+  margin-bottom: 5px; }
+
+.carousel .item {
+  height: 250px; }
+
+.item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 250px; }
+
+img.d-block {
+  max-height: 360px; }
+
+.socialMedia i {
+  font-size: 50px;
+  margin-left: 20px;
+  color: #343a40; }
+
+.socialMedia i:hover {
+  color: #007bff; }
+
+h3#social {
+  margin-bottom: 30px; }
+
 @keyframes arrow {
   0% {
     transform: translateY(-20px); }
@@ -7898,7 +7932,7 @@ a#author {
   width: 435px; }
 
 section.findUs {
-  padding: 20px 20px; }
+  padding: 0 20px; }
 
 div.left {
   padding-left: 0; }
@@ -7909,9 +7943,19 @@ div.left {
 .form-control {
   background-color: #e9ecef; }
 
+div.find > div {
+  padding-left: 0;
+  padding-right: 0; }
+
+img.img-fluid {
+  margin-bottom: 30px; }
+
 @media (max-width: 576px) {
   .nav-item {
     font-size: 1.2rem; }
+
+  .navbar .nav-link:hover {
+    border-bottom: none; }
 
   .navbar-brand h3 {
     font-size: 1.5rem; }
@@ -7920,6 +7964,39 @@ div.left {
     font-size: 4rem; }
 
   p.details {
-    font-size: 1.2rem; } }
+    font-size: 1.2rem; }
+
+  div.msg {
+    margin-top: 20px; }
+
+  .map-container iframe {
+    height: 100%;
+    width: 100%; }
+
+  div.footer {
+    font-size: 1rem;
+    height: 80px; }
+
+  img.img-fluid {
+    margin-bottom: 10px; }
+
+  nav {
+    background-color: #007bff; } }
+@media (max-width: 992px) {
+  div.find > div {
+    padding-left: 15px;
+    padding-right: 15px; }
+
+  div.row.gallery {
+    margin-bottom: 25px; }
+
+  .head {
+    display: none; } }
+@media (max-width: 767.98px) {
+  div.msg {
+    margin-top: 20px; }
+
+  img.img-fluid {
+    margin-bottom: 25px; } }
 
 /*# sourceMappingURL=app.css.map */
