--- a/css/app.css
+++ b/css/app.css
@@ -7848,6 +7848,16 @@ i.arrow {
   left: 50%;
   transform: translate(-50%, -50%); }
 
+#count {
+  min-height: 20vh;
+  position: relative; }
+
+#timer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
 div.header p {
   margin-top: 0;
   text-align: center; }
@@ -7981,7 +7991,10 @@ img.img-fluid {
     margin-bottom: 10px; }
 
   nav {
-    background-color: #007bff; } }
+    background-color: #007bff; }
+
+  #timer {
+    margin-top: 80px; } }
 @media (max-width: 992px) {
   div.find > div {
     padding-left: 15px;
